Avoid using `getFirst()`